<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-223dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtQuestionario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txtQuestionario"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edNome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edSobrenome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edTelefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtFrmSintomas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="25dp"
                android:text="@string/txtSintomas"
                android:textAlignment="center"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/checkDorCabeca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/dorcabeca" />

            <CheckBox
                android:id="@+id/checkFebre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/febre" />

            <CheckBox
                android:id="@+id/checkRespiracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/respiracao" />

            <CheckBox
                android:id="@+id/checkDorGarganta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/garganta" />

            <CheckBox
                android:id="@+id/checkFala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/falaMovimento" />

            <CheckBox
                android:id="@+id/checkOlfato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/paladar" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="#66BB6A"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btnEnviar"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorMenu"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>